# ray-tracing-weekend

./: CMakeLists.txt  README.md  book2_final_scene_random.json  ew.ppm  random_scene_noise.json  random_scene_og.json  world.json
src/: aabb.h  aarect.h  box.h  bvh.h  camera.h  canvas.h  color.h  hittable.h  hittable_list.h  main.cpp  material.h  mc.cpp  onb.h  pdf.h  perlin.h  ray.h  scene.h  spectrum.h  spectrum_consts.h  sphere.h  texture.h  util.h  vec3.h  volume.h
test/: CMakeLists.txt  aabb.cpp  bvh.cpp  camera.cpp  canvas.cpp  color.cpp  hittable_list.cpp  json.cpp  material.cpp  onb.cpp  ray.cpp  scene.cpp  spectrum.cpp  sphere.cpp  test.h  texture.cpp  vec3.cpp
